QA, bruker toList() direkte, endrer til finnDokument, og bruker class::cast