@@ -3,7 +3,6 @@ package no.nav.melosys.tjenester.gui.dto;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import no.nav.melosys.domain.behandlingsgrunnlag.data.MedfolgendeFamilie;
 
@@ -25,13 +24,13 @@ public record TrygdeavtaleInfoDto(String aktoerId, String behandlingstema,
     public static List<IdNavnDto> mapVirksomheter(Map<String, String> virksomheter) {
         return virksomheter.entrySet().stream()
             .map(virksomhet -> new IdNavnDto(virksomhet.getKey(), virksomhet.getValue()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static List<IdNavnDto> filtrerOgMapFamilie(List<MedfolgendeFamilie> familie, Predicate<MedfolgendeFamilie> filterfunksjon) {
         return familie.stream()
             .filter(filterfunksjon)
             .map(familiemedlem -> new IdNavnDto(familiemedlem.uuid, familiemedlem.navn))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
